nginx_debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: jupyter-volume-storage
      persistentVolumeClaim:
        claimName: jupyter-volume-claim-2
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: jupyter-volume-storage
      resources:
        requests:
          memory: "1Gi"
          cpu: "0.1"
        limits:
          memory: "1Gi"
          cpu: "0.1"
