ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: jupyter-service
      port:
        number: 1111
  rules:
    - host: david-home.com # Don't forget to change vi /etc/hosts mapping as well!
      http:
        paths:
        - path: /jupyter
          pathType: Exact
          backend:
            service:
              name: jupyter-service
              port:
                number: 1111
        - path: /mongodb
          pathType: Exact
          backend:
            service:
              name: mongodb-service
              port:
                number: 27017
